# ESP32P4-MnK-Adapter

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sdkconfig.defaults
main/: CMakeLists.txt  XInputPad.h  hid_host.c  idf_component.yml  input_bridge.c  input_bridge.h  main.c  xinput.c  xinput_desc.c
